make status bar color dynamic based of the prioritized colors in the image